chore: add testOnJava21 task
- Bump Gradle@8.4-rc-2
- Add tasks: testOnJava21 and runOnJava21

Note: you can download and install an EA version of OpenJDK 21 from
https://github.com/adoptium/temurin21-binaries/releases/tag/jdk-21%2B35-ea-beta
then you can run OmegaT on Java 21

Signed-off-by: Hiroshi Miura <miurahr@linux.com>